syntax = "proto3";

package org.project_planton.provider.kubernetes.kubernetestektonoperator.v1;

import "org/project_planton/provider/kubernetes/kubernetestektonoperator/v1/api.proto";
import "org/project_planton/provider/kubernetes/provider.proto";

// KubernetesTektonOperatorStackInput defines the inputs required for the Tekton Operator IaC modules.
message KubernetesTektonOperatorStackInput {
  // target cloud-resource
  KubernetesTektonOperator target = 1;
  // provider-config for Kubernetes
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
}
